--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         }
 
         .hero-bg {
-            background-image: url("https://images.unsplash.com/photo-1470229722913-7ea995968f55?q=80&w=2070&auto=format&fit=crop");
+            /* Updated: More dramatic stage lighting */
+            background-image: url("https://images.unsplash.com/photo-1517457388701-073840af7c9b?q=80&w=2070&auto=format&fit=crop");
             background-size: cover;
             background-position: center;
         }
@@ -73,15 +74,16 @@
                 </span>
             </a>
 
-            <!-- Desktop Nav -->
+            <!-- Desktop Nav (Updated to match image links) -->
             <div class="hidden md:flex items-center gap-8 text-sm font-bold tracking-widest uppercase">
-                <a href="#about" class="hover:text-amber-500 transition-colors">About</a>
-                <a href="#media" class="hover:text-amber-500 transition-colors">Media Hub</a>
-                <a href="#experience" class="hover:text-amber-500 transition-colors">Live & Setlist</a>
+                <a href="#about" class="hover:text-amber-500 transition-colors">THE BAND</a>
+                <a href="#experience" class="hover:text-amber-500 transition-colors">LIVE EXPERIENCE</a>
+                <a href="#media" class="hover:text-amber-500 transition-colors">MUSIC</a>
+                <a href="#media" class="hover:text-amber-500 transition-colors">VIDEO</a>
                 <a href="#contact"
                     class="px-5 py-2 bg-amber-600 hover:bg-amber-700 text-white font-bold transition-colors rounded-sm flex items-center gap-2">
                     <i data-lucide="calendar" class="w-4 h-4"></i>
-                    Book Now
+                    BOOK NOW
                 </a>
             </div>
 
@@ -91,16 +93,18 @@
             </button>
         </div>
 
-        <!-- Mobile Menu Overlay -->
+        <!-- Mobile Menu Overlay (Updated to match new links) -->
         <div id="mobile-menu"
             class="hidden absolute top-full left-0 w-full bg-zinc-900 border-t border-zinc-800 p-6 flex-col gap-6 md:hidden shadow-2xl">
-            <a href="#about" class="mobile-nav-link text-lg font-bold hover:text-amber-500 uppercase tracking-wider">The
-                Band</a>
-            <a href="#media"
-                class="mobile-nav-link text-lg font-bold hover:text-amber-500 uppercase tracking-wider">Media Hub</a>
+            <a href="#about" class="mobile-nav-link text-lg font-bold hover:text-amber-500 uppercase tracking-wider">THE
+                BAND</a>
             <a href="#experience"
-                class="mobile-nav-link text-lg font-bold hover:text-amber-500 uppercase tracking-wider">Live
-                Experience</a>
+                class="mobile-nav-link text-lg font-bold hover:text-amber-500 uppercase tracking-wider">LIVE
+                EXPERIENCE</a>
+            <a href="#media"
+                class="mobile-nav-link text-lg font-bold hover:text-amber-500 uppercase tracking-wider">MUSIC</a>
+            <a href="#media"
+                class="mobile-nav-link text-lg font-bold hover:text-amber-500 uppercase tracking-wider">VIDEO</a>
             <a href="#contact"
                 class="mobile-nav-link w-full text-center py-4 bg-amber-600 text-white font-bold uppercase tracking-widest">
                 Book The Band
@@ -108,40 +112,42 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Hero Section (Updated to match image layout and text) -->
     <header class="relative h-screen flex items-center justify-center overflow-hidden hero-bg">
         <div class="absolute inset-0 z-0">
-            <div class="absolute inset-0 bg-gradient-to-t from-[#0a0a0a] via-black/30 to-black/70"></div>
+            <!-- Darker overlay to enhance drama -->
+            <div class="absolute inset-0 bg-gradient-to-t from-[#0a0a0a] via-black/50 to-black/90"></div>
             <div class="absolute inset-0 grain-overlay"></div>
         </div>
 
         <div class="relative z-10 text-center px-4 max-w-5xl mx-auto mt-16">
-            <div
-                class="inline-flex items-center gap-2 px-3 py-1 border border-white/20 rounded-full bg-black/40 backdrop-blur-md mb-6 animate-pulse">
-                <div class="w-2 h-2 rounded-full bg-green-500"></div>
-                <span class="text-xs font-bold uppercase tracking-wider text-gray-300">Booking 2025 Tour Dates</span>
-            </div>
 
-            <h1
-                class="text-6xl md:text-8xl lg:text-9xl font-black uppercase tracking-tighter text-white mb-6 leading-none shadow-black drop-shadow-2xl">
-                Whiskey<span class="text-gradient">Fix</span>
-            </h1>
-            <p class="text-lg md:text-2xl text-gray-300 max-w-2xl mx-auto mb-10 font-light leading-relaxed">
-                Professional High-Energy Rock & Blues. <br />
-                <span class="text-white font-medium">Tailored for Festivals, Corporate Events, and Premier
-                    Venues.</span>
+            <!-- New Preamble Text (EST. 2018 • NASHVILLE, TN) -->
+            <p class="text-sm font-bold uppercase tracking-widest text-amber-500 mb-6">
+                EST. 2018 • NASHVILLE, TN
             </p>
 
-            <div class="flex flex-col md:flex-row gap-4 justify-center items-center">
+            <h1
+                class="text-7xl md:text-8xl lg:text-[10rem] font-black uppercase text-white mb-6 leading-none shadow-black drop-shadow-2xl">
+                WHISKEY<span class="text-gradient">FIX</span>
+            </h1>
+            <p class="text-lg md:text-2xl text-gray-300 max-w-2xl mx-auto mb-10 font-light leading-relaxed">
+                The premier high-energy rock & blues experience. <br />
+                <span class="text-white font-medium">Available for festivals, private events, and venues.</span>
+            </p>
+
+            <div class="flex flex-col md:flex-row gap-6 justify-center items-center">
+                <!-- Check Availability Button (Orange) -->
                 <a href="#contact"
-                    class="w-full md:w-auto px-8 py-4 bg-amber-600 hover:bg-amber-700 text-white font-bold uppercase tracking-widest transition-all transform hover:scale-[1.02] shadow-lg shadow-amber-900/20 flex items-center justify-center gap-2 rounded-sm">
-                    <i data-lucide="mail" class="w-4 h-4"></i>
-                    Inquire Now
+                    class="w-full md:w-auto px-12 py-4 bg-amber-600 hover:bg-amber-700 text-black font-bold uppercase tracking-widest transition-all transform hover:scale-[1.02] shadow-xl shadow-amber-900/50 flex items-center justify-center gap-2 rounded-sm">
+                    <i data-lucide="clipboard-check" class="w-4 h-4"></i>
+                    CHECK AVAILABILITY
                 </a>
+                <!-- Watch Live Reel Button (Bordered, Dark) -->
                 <a href="#media"
-                    class="w-full md:w-auto px-8 py-4 border border-white/30 hover:border-white hover:bg-white/10 text-white font-bold uppercase tracking-widest transition-all backdrop-blur-sm flex items-center justify-center gap-2 rounded-sm">
-                    <i data-lucide="play" class="w-4 h-4"></i>
-                    View EPK
+                    class="w-full md:w-auto px-12 py-4 border border-white/30 hover:border-white hover:bg-white/10 text-white font-bold uppercase tracking-widest transition-all backdrop-blur-sm flex items-center justify-center gap-2 rounded-sm">
+                    <i data-lucide="play-circle" class="w-4 h-4"></i>
+                    WATCH LIVE REEL
                 </a>
             </div>
         </div>
@@ -217,7 +223,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-1 lg:grid-cols-12 gap-12">
+            <div class="grid grid-cols-1 lg:col-span-12 gap-12">
 
                 <!-- LEFT COL: Discography & Video (Visuals) -->
                 <div class="lg:col-span-7 space-y-16">
@@ -426,30 +432,36 @@
         </div>
     </section>
 
-    <!-- Booking CTA - Clean & Professional -->
-    <section id="contact" class="py-32 relative bg-amber-700 flex items-center justify-center overflow-hidden">
-        <div class="absolute inset-0 mix-blend-multiply bg-zinc-900">
-            <img src="https://images.unsplash.com/photo-1533174072545-e8d4aa97edf9?q=80&w=2070&auto=format&fit=crop"
-                class="w-full h-full object-cover opacity-20 grayscale" alt="Live stage lights background"
-                onerror="this.onerror=null;this.src='https://placehold.co/2070x1000/171717/ffffff?text=Stage+Lights';" />
+    <!-- Booking CTA - Updated to Match Image Style -->
+    <section id="contact" class="py-32 relative bg-black flex items-center justify-center overflow-hidden">
+        <!-- Updated: Close-up of guitar/strings for a non-busy but relevant look -->
+        <div class="absolute inset-0 bg-cover bg-center"
+            style="background-image: url('https://images.unsplash.com/photo-1549487961-39659b867c26?q=80&w=2070&auto=format&fit=crop');"
+            onerror="this.onerror=null;this.style.backgroundImage='url(https://placehold.co/2070x1000/171717/ffffff?text=Stage+Lights+Dark)';">
         </div>
+        <!-- Black Overlay to create the dark, high-contrast look -->
+        <div class="absolute inset-0 bg-black/80"></div>
 
         <div class="relative z-10 container mx-auto px-6 text-center">
-            <h2 class="text-4xl md:text-6xl font-black text-white uppercase mb-6 drop-shadow-xl">
-                Let's Pack The Venue.
+            <!-- Heading updated to all caps for dramatic effect -->
+            <h2 class="text-5xl md:text-7xl font-black text-white uppercase mb-6 tracking-tight">
+                LET'S PACK THE VENUE.
             </h2>
-            <p class="text-lg md:text-xl text-amber-100 max-w-2xl mx-auto mb-10 font-light">
+            <!-- Subtext color adjusted -->
+            <p class="text-lg md:text-xl text-amber-300 max-w-3xl mx-auto mb-12 font-light">
                 Booking inquiries for <span class="font-bold text-white">2025</span> are now open.
             </p>
-            <div class="flex flex-col md:flex-row justify-center gap-4">
+            <div class="flex flex-col md:flex-row justify-center gap-6">
+                <!-- Button 1: White background, black text (CONTACT MANAGEMENT) -->
                 <a href="mailto:booking@whiskeyfix.com"
-                    class="px-10 py-4 bg-white text-black hover:bg-gray-200 font-black text-sm md:text-base uppercase tracking-widest rounded-sm transition-transform hover:-translate-y-1 shadow-2xl flex items-center justify-center gap-2">
-                    <i data-lucide="mail" class="w-4 h-4"></i> Contact Management
+                    class="px-10 py-4 bg-white text-black font-black text-sm md:text-base uppercase tracking-widest transition-colors hover:bg-gray-200">
+                    CONTACT MANAGEMENT
                 </a>
+                <!-- Button 2: Transparent background, white border/text (TECH RIDER & STAGE PLOT) -->
                 <button
-                    class="px-10 py-4 border-2 border-white text-white hover:bg-white/10 font-bold text-sm md:text-base uppercase tracking-widest rounded-sm transition-colors flex items-center justify-center gap-2"
+                    class="px-10 py-4 border border-white text-white bg-transparent hover:bg-white/10 font-black text-sm md:text-base uppercase tracking-widest transition-colors"
                     onclick="console.log('Mock download started: Tech Rider PDF.')">
-                    <i data-lucide="download" class="w-4 h-4"></i> Tech Rider & Stage Plot
+                    TECH RIDER & STAGE PLOT
                 </button>
             </div>
         </div>
